Initial experiment with Jekyll

--- a/index.html
+++ b/index.html
@@ -1,27 +1,4 @@
-<html>
-<head>
-<link rel="stylesheet" type="text/css" href="css/mainstyle.css">
-<script src="jquery-1.11.min.js"></script>
-</head>
-<body>
-<!-- everything in here should come from snippets/head.html -->
-<div id="header" class="header">
-    <div class="header" id="title">
-        Title goes here
-    </div>
-    <div class="header" id="links">
-        <a href="index.html" class="header">Home</a>
-        <a href="#" class="header">Projects</a>
-        <a href="https://github.com/iveygman" target="_blank" class="header">Github</a>
-    </div>
-
-</div>
-<!-- this will load blog posts -->
-<div id="main">
-a;kdja;lskdjfa;lskdj
-</div>
-</body>
-<script>
-$( "#header" ).load( "snippets/head.html" );
-</script>
-</html>
+---
+layout: default
+title: I, Veygman 
+---
